--- a/glossary.html
+++ b/glossary.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+  <link rel="icon" type="image/png" href="img/icon1.png">
   <meta charset="UTF-8">
   <title>Глоссарий</title>
   <link rel="stylesheet" href="style/style.css">
